--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./index.css">
+    <link rel="shortcut icon" href="./img/icons8-vamos-encriptar-50.png" type="image/x-icon">
     <title>Cifra de césar/Base 64</title>
 </head>
 
@@ -14,38 +15,35 @@
 
         <fieldset>
             <h1>Criptografia</h1>
-            <textarea name="entrada" id="" cols="30" rows="10" placeholder="Digite sua mensagem aqui."
+            <textarea name="entrada" id="entrada" cols="30" rows="10" placeholder="Digite sua mensagem aqui."
                 required></textarea>
             <p class="paragrafo">Escolha um método para codificar ou decoficar uma mesnsagem.</p>
 
             <select name="escolha" id="escolher" required>
                 <option value="um">Escolha</option>
-                <option value="dois" id="codificar">Cifra de César</option>
-                <option value="tres" id="descodificar">Base 64</option>
+                <option value="cifra" id="cifra">Cifra de César</option>
+                <option value="base" id="base">Base 64</option>
                <input class="passo" type="number" min="1" max="26" name="passo" id="passo-cifra">
             </select>
             
+    <fiedset class="opcao">
 
-
-            
-
-            <fiedset class="opcao">
-
-                <div class="cod" id="coded">
-                    <input type="radio" name="botao" id="codificar" checked>
-                    <label for="codifica">Codificar</label>
+                <div class="cod" id="cod">
+                    <input type="radio" name="botao" value="" id="codifica" checked>
+                    <label for="codifico">Codificar</label>
                 </div>
+
                 <div id="decod">
-                    <input type="radio" name="botao" value="codificar" id="">
-                    <label for="decescodifica">Descodificar</label>
+                    <input type="radio" name="botao" value="" id="decodifica">
+                    <label for="decescodifica">Decodificar</label>
                 </div>
             </fiedset>
 
-            <output class="saida">
-                <p></p>
-            </output>
+            <output id="saida" class="saida"></output>
 
-            <div id="botao"></div>
+            <div class="botao-hmtl" id="botao">
+                <button class="btn-html" id="btn" >Codificar</button>
+            </div>
 
             </fiedset>
     </form>
